Fixed horizontal scroll bug

--- a/css/detections.css
+++ b/css/detections.css
@@ -77,3 +77,32 @@
     height:30px;
 }
 /* End of full screen settings */
+
+/* Parameter Controls */
+#parameterControls{
+    font-size: 12px;
+    padding:10px;
+}
+
+.noUi-horizontal {
+    height: 6px;
+}
+
+.noUi-target {
+    background: #FAFAFA;
+    border-radius: 4px;
+    border: 0;
+    box-shadow: none;
+}
+
+.noUi-horizontal .noUi-handle {
+    width: 20px;
+    height: 20px;
+    left: -17px;
+    top: -7px;
+    border-radius: 50%;
+}
+.noUi-handle:before, .noUi-handle:after{
+    content: none;
+}
+
